# docs/swagger.json
@@ -733,7 +733,7 @@
                 }
             }
         },
-        "/novel/from/:userID": {
+        "/novel/from/:username": {
             "post": {
                 "description": "If the user is not logged in, only the public novels will be returned",
                 "produces": [
@@ -746,8 +746,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User ID",
-                        "name": "UserID",
+                        "description": "username",
+                        "name": "username",
                         "in": "path",
                         "required": true
                     },
